# Group7_AMR

./: .gitignore  AGENT_GIT_GUIDE.md  CHANGELOG.md  CLAUDE.md  README.md  requirements.txt
archive/amr_utils/: package.xml  setup.cfg  setup.py
docs/: MANUFACTURING.md
docs/diagrams/: .gitignore  01-hld-architectural-overview.puml  02-hld-data-flow.puml  03-hld-hardware-software-mapping.puml  04-ssd-perception-pipeline.puml  05-ssd-docking-fsm.puml  06-ssd-mission-fsm.puml  07-icd-tf-tree.puml  _style.iuml
docs/end_user_doc/: EndUserDocumentation_Group7.md
docs/reports/: conops.md  high_level_design.md  interface_control_document.md  requirements_specification.md  software_development.md  subsystem_design.md  testing_documentation.md
hardware/: README.md
hardware/chassis/3mf/: RPI camera mount.3mf  launcher mount.3mf  mount to plate bottom.3mf  wire holder (end).3mf
hardware/chassis/assembly/: 530480810.SLDPRT  BIC04_C01_PCB.SLDPRT  Dynamixel Motor.SLDASM  First Layer.SLDASM  Fourth Layer.SLDASM  LB-012 Battery.SLDPRT  Launcher Assembly.SLDASM  MICRO_USB-3.SLDPRT  MICRO_USB-4.SLDPRT  MICRO_USB-5.SLDPRT  MICRO_USB-6.SLDPRT  MICRO_USB-8.SLDPRT  MICRO_USB.SLDPRT  M_PR07_A01_BRACKET_2.SLDPRT  M_PR07_A01_SPACER_RIVET.SLDPRT  P30_ISP_A001_3D.SLDPRT  PR16_A01_TIRE_2.SLDPRT  PR21_CASTER_CVR_3X5_REV6.SLDPRT  PR30_IBB_01_3D-10.SLDPRT  PR30_IBB_01_3D.SLDPRT  Raspberry_Dummy.SLDPRT  STEELBALL_3_8INCH.SLDPRT  SUPPORT_HEX_M3_0XL35_FF.SLDPRT  SUPPORT_HEX_M3_0XL45_FF-9.SLDPRT  SUPPORT_HEX_M3_0XL45_FF.SLDPRT  Second Layer.SLDASM  Stepper Dummy.SLDPRT  Third Layer.SLDASM  USB2LDS _1_.SLDASM  Waffle Layer.SLDASM  Waffle Layer2.SLDASM  Waffle Plate.SLDPRT  ball_caster _1_.SLDASM  hexagon nut style 1 gradeab_ks.sldprt  motor dummy.SLDPRT  pan cross head_ks.sldprt  wheel _1_.SLDASM
hardware/chassis/mounts/: launcher mount v2.3mf  launcher mount v2.SLDPRT
hardware/launcher/3mf/: Plunger face.3mf  Plunger rack.3mf  barrel2storage.3mf  spur gear for servo.3mf
hardware/launcher/components/: Barrel guide.SLDPRT  Carousell.SLDPRT  Clamp1.SLDPRT  Clamp2.SLDPRT  Flywheel dummy.SLDPRT  Motor Clamp.SLDPRT  Motor.SLDPRT  Part 1-14.SLDPRT  Part 2-12.SLDPRT  Part 3.SLDPRT  Rotor.SLDPRT  spur gear for servo with bearing.3mf  spur gear for servo with bearing.SLDPRT
hardware/launcher/v1/: Plunger.SLDPRT  Tube.SLDPRT
hardware/launcher/v1/launcher assembly/: Plunger.3mf  Plunger.SLDPRT  RPI camera mount.SLDPRT  SG90-Servo.SLDPRT  Tube.3mf  Tube.SLDPRT  barrel2storage.SLDPRT  launcher assembly.3mf  launcher assembly.SLDASM  servo mount.SLDPRT  spur gear for servo.SLDPRT
src/CDE2310_AMR_Trial_Run/: package.xml  setup.cfg  setup.py
src/CDE2310_AMR_Trial_Run/CDE2310_AMR_Trial_Run/: apriltag_detector.py  delivery_server.py  delivery_server_consolidated.py  docker.py  launcher_node.py  mission_coordinator_custom_explorer.py  mission_coordinator_prototype.py  mission_coordinator_v3.py  rpi_shooter_node.py  search_stations.py  static_station.py
src/CDE2310_AMR_Trial_Run/config/: cartographer.lua  ekf.yaml  minimal_nav2.yaml  slam_params.yaml
src/CDE2310_AMR_Trial_Run/launch/: full_mission.launch.py  gazebo_mission.launch.py  minimal_nav2.launch.py  mission.launch.py  nav_tuner.launch.py  slam_test.launch.py
src/CDE2310_AMR_Trial_Run/models/apriltag_0/: model.config  model.sdf
src/CDE2310_AMR_Trial_Run/models/apriltag_0/materials/scripts/: apriltag.material
src/CDE2310_AMR_Trial_Run/models/apriltag_2/: model.config  model.sdf
src/CDE2310_AMR_Trial_Run/models/apriltag_2/materials/scripts/: apriltag.material
src/CDE2310_AMR_Trial_Run/worlds/: amr_maze.world
src/amr_bringup/: package.xml  setup.py
src/amr_launcher/: package.xml  setup.cfg  setup.py
src/amr_launcher/amr_launcher/: delivery_sequencer.py  mission_test.py  static_station.py
src/amr_launcher/amr_launcher/dynamic_station/: apriltag_detector.py
src/amr_nav/: package.xml  setup.py
src/amr_nav/amr_nav/: auto_nav.py  coverage_monitor.py  pathfinding.py
src/amr_nav/config/: nav_tuning.yaml  slam_params.yaml  slam_params_sim.yaml
src/amr_nav/launch/: launch.py  mission.launch.py  sim_exploration.launch.py
src/amr_nav/test/: test_pathfinding.py
src/amr_navigation/: package.xml  setup.py
src/amr_perception/: package.xml  setup.py
src/amr_perception/amr_perception/: apriltag_detector.py
src/amr_utils/: package.xml  setup.py
src/apriltag_docking/: CMakeLists.txt  package.xml
src/apriltag_docking/config/: apriltags_36h11.yaml
src/apriltag_docking/launch/: apriltag_dock_pose_publisher.launch.py
src/apriltag_docking/src/: detected_dock_pose_publisher.cpp
src/auto_explore/: package.xml  setup.py
src/auto_explore/auto_explore/: find_frontiers.py  score_and_post.py
src/auto_explore/config/: nav2_params.yaml
src/auto_explore_v2/: package.xml  setup.cfg  setup.py
src/auto_explore_v2/auto_explore_v2/: auto_explore.code-workspace  find_frontiers.py  score_and_post.py
src/auto_explore_v2/config/: nav2_params.yaml
src/auto_explore_v2/launch/: auto_explore.launch.py
