<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>amr_nav</name>
  <version>0.1.0</version>
  <description>Custom navigation: Dijkstra target finding, A* wall penalty, cluster movement</description>
  <maintainer email="jeonwonje04@gmail.com">jeon-ros2-humble-gazebo-wsl</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>amr_perception</exec_depend>
  <exec_depend>amr_launcher</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
